Transaction specs completed and statement begun

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,13 @@
   <script src="lib/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Banking.js"></script>
+  <script src="src/Transaction.js"></script>
+  <script src="src/Statement.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
-  <script src="spec/BankingSpec.js"></script>
+  <script src="spec/TransactionSpec.js"></script>
+  <script src="spec/StatementSpec.js"></script>
 
 </head>
 
